# DataGenPrototype

./: .coverage  .pre-commit-config.yaml  .replit  Home.py  README.md  README_ENG.md  README_GER.md  add_sample_showcases.py  app.py  data_generator.py  database_utils.py  export_utils.py  field_definitions.py  pseudonymize_utils.py  pseudonymizer_app.py  pyproject.toml  pytest.ini  sample_data.csv  setup.cfg
.streamlit/: config.toml  pages.toml
attached_assets/: content-1747818811882.md
docs/: code_quality.md
pages/: 1_Testdaten_Generator.py  3_Community_Showcase.py
scripts/: run_code_checks.sh  setup_git_hooks.sh
tests/: README.md  test_app_integration.py  test_data_generator.py  test_database_utils.py  test_db_resilience.py  test_export_utils.py  test_field_definitions.py  test_integration_resilience.py  test_pseudonymize_utils.py  test_showcase_samples.py
