[project]
name = "testdaten-generator"
version = "1.0.0"
description = "Test data generator with pseudonymization capabilities"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "faker",
    "sqlalchemy",
    "openpyxl",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest]
testpaths = ["tests"]
pythonpath = ["."]
